# Cisformer

./: .gitignore  .readthedocs.yaml  LICENCE  README.md  atac2rna_data_preprocess.py  atac2rna_near_attention_generate.py  atac2rna_predict.py  atac2rna_train.py  compute_near_enhancer.py  human_genes.tsv  map_rna_atac.py  pyproject.toml  requirement.sh  rna2atac_data_preprocess.py  rna2atac_predict.py  rna2atac_train.py  split_train_val_test.py
M2Mmodel/: M2M.py  block.py  utils.py
args/: accelerate_config.yaml  atac2rna_config.yaml  rna2atac_config_test.yaml  rna2atac_config_train.yaml  rna2atac_config_val.yaml
cisformer/: __init__.py  atac2rna_predict.py  atac2rna_surround_attention_generate.py  atac2rna_train.py  compute_surround_enhancer.py  data_preprocess.py  generate_default_config.py  map_rna_atac.py  rna2atac_predict.py  rna2atac_train.py  runner.py
cisformer/M2Mmodel/: M2M.py  block.py  utils.py
docs/source/: cisformer.rst  conf.py  installation.rst  modules.rst  quickstart.md  release.md
test_data/: celltype_info.tsv  rna.h5ad
